--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.application'
 apply plugin: 'android-apt'
 android {
-    compileSdkVersion 24
-    buildToolsVersion "24.0.2"
+    compileSdkVersion 23
+    buildToolsVersion '22.0.1'
 
     defaultConfig {
         applicationId "com.tuojin.tvfilm"
         minSdkVersion 17
-        targetSdkVersion 24
+        targetSdkVersion 23
         versionCode 1
         versionName "1.0"
     }
@@ -29,17 +29,22 @@ dependencies {
     //    websocket请求
     //    图片加载
     compile project(':androidtvwidget')
-    compile 'com.android.support:appcompat-v7:24.2.1'
+    compile 'com.android.support:appcompat-v7:23.1.1'
+//    视图注入，黄油刀
     compile 'com.jakewharton:butterknife:8.2.1'
+    apt 'com.jakewharton:butterknife-compiler:8.2.1'
+//    文字闪烁
     compile 'com.romainpiel.shimmer:library:1.4.0@aar'
+//    网络加载库
     compile 'com.koushikdutta.async:androidasync:2.+'
     compile 'com.google.code.gson:gson:2.7'
-    compile 'com.android.support:support-v4:24.2.1'
-    compile 'com.android.support:recyclerview-v7:24.2.1'
-    compile 'com.android.support:cardview-v7:24.2.1'
+    compile 'com.android.support:support-v4:23.0.1'
+    compile 'com.android.support:recyclerview-v7:23.0.1'
+    compile 'com.android.support:cardview-v7:23.0.1'
+//    图片加载库
     compile 'com.github.bumptech.glide:glide:3.6.1'
     testCompile 'junit:junit:4.12'
-    apt 'com.jakewharton:butterknife-compiler:8.2.1'
-
+//    方便处理的recycleview
     compile 'com.jude:easyrecyclerview:4.2.1'
+
 }
