--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,14 +6,15 @@
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+        android:theme="@style/AppTheme">
 
         <!-- <activity android:name=".modules.main.MainActivity"/> > -->
 
         <activity
             android:name=".modules.main.MainActivity"
-            android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
+            android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
@@ -24,6 +25,8 @@
         <activity android:name=".modules.main.FilmDetailActivity"/>
         <!-- 搜索界面 -->
         <activity android:name=".modules.search.SearchActivity"/>
+        <activity android:name=".modules.catelist.CateListActivity"/>
+        <activity android:name=".modules.catelist.CategoryGeneralActivity"/>
     </application>
 
 </manifest>
