--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".modules.launch.LaunchActivity"
+            android:name=".modules.main.MainActivity"
             android:theme="@style/AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -23,7 +23,7 @@
         <!-- 搜索界面 -->
         <!--<activity android:name=".modules.search.SearchActivity"/>-->
         <!-- 主页面 -->
-        <activity android:name=".modules.main.MainActivity"/>
+        <!--<activity android:name=".modules.main.MainActivity"/>-->
         <!-- 分类列表 -->
         <activity android:name=".modules.catelist.CateListActivity"/>
 
@@ -33,6 +33,8 @@
         <activity android:name=".modules.catelist.TypeListActivity"/>
         <!--导演列表-->
         <activity android:name=".modules.catelist.DirectorListActivity"/>
+        <!--地区-->
+        <activity android:name=".modules.catelist.area.AreaActivity"/>
         <!--排行榜-->
         <activity android:name=".modules.main.sortlist.SortActivity">
         </activity>
