--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,20 +23,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    //    compile 'com.github.bumptech.glide:glide:3.6.1'
-    //    黄油刀
-    //    网络请求 okhttpfinal框架
-    //    compile 'cn.finalteam:okhttpfinal:2.0.7'
-    //    compile 'org.java-websocket:Java-WebSocket:1.3.0'
-    //    websocket请求
-    //    图片加载
     compile project(':androidtvwidget')
-    //    视图注入，黄油刀
-    //    文字闪烁
-    //    网络加载库
-    //    图片加载库
-    //    方便处理的recycleview
-
     compile 'com.android.support:appcompat-v7:23.1.1'
     compile 'com.android.support:support-v4:23.0.1'
     compile 'com.android.support:recyclerview-v7:23.1.1'
@@ -47,13 +34,16 @@ dependencies {
 //    compile 'com.android.support:recyclerview-v7:24.2.1'
 //    compile 'com.android.support:cardview-v7:24.2.1'
 
-
+    //    视图注入，黄油刀
     compile 'com.jakewharton:butterknife:8.2.1'
+    //    文字闪烁
     compile 'com.romainpiel.shimmer:library:1.4.0@aar'
     compile 'com.koushikdutta.async:androidasync:2.+'
     compile 'com.google.code.gson:gson:2.7'
     compile 'com.github.bumptech.glide:glide:3.6.1'
-    compile 'com.jude:easyrecyclerview:4.2.1'
+//    compile 'com.jude:easyrecyclerview:4.2.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
+//直播组件
+    compile 'fm.jiecao:jiecaovideoplayer:4.7.1_preview'
 }
