--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
 
 dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
-    compile project(':androidtvwidget')
+//    compile project(':androidtvwidget')
     compile files('libs/lite-orm-1.9.2.jar')
     compile files('libs/autobahn-0.5.0.jar')
     compile files('libs/commons-lang-2.6.jar')
@@ -44,7 +44,7 @@ dependencies {
     compile 'com.android.support:design:23.1.1'
     testCompile 'junit:junit:4.12'
     apt 'com.jakewharton:butterknife-compiler:8.2.1'
-    compile 'com.devbrackets.android:exomedia:3.1.0'
+//    compile 'com.devbrackets.android:exomedia:3.1.0'
 //    compile project(':library')
-    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
+//    compile 'com.afollestad.material-dialogs:core:0.9.1.0'
 }
